# gopy-ha-proton-drive

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml  release.sh  requirements-dev.txt  setup.py
.github/workflows/: lint-gha.yaml  lint-go.yaml  lint-python.yaml  lint.yaml
go/: folder.go  helpers.go
go/client/: client.go  folder.go  helpers.go  login.go  manager.go  metadata.go  share.go
go/cmd/go_exec/: main.go
go/protonx/: crypto.go  extension.go  files_download.go  files_operations.go  files_upload.go  helpers.go  keyrings.go  links.go  share.go
go/protonx/internal/cache/: cache.go
python/proton/: __init__.py  proton.py
