[project]
name = "gopy-ha-proton-drive"
version = "0.1.0"
description = "Python bindings for a Go wrapper around go-proton-api and Proton-API-Bridge"
readme = "README.md"
requires-python = ">=3.13"
license = "MPL-2.0"
authors = [{ name = "Louis Brunner", email = "pip@lbrunner.net" }]
keywords = ["drive", "proton"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/LouisBrunner/gopy-ha-proton-drive"
Repository = "https://github.com/LouisBrunner/gopy-ha-proton-drive"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["python"] }

[tool.setuptools.package-data]
proton = ["py.typed"]
